styles/scss/vtex.product-summary.scss
@import "./references";

.skuSelectorContainer--quickview .skuSelectorItemImage .frameAround,
.skuSelectorContainer--quickview .skuSelectorItemImage .skuSelectorInternalBox {
  border-radius: 50%;
}

.container :global(.vtex-modal-layout-0-x-triggerContainer) {
  opacity: 0;
  transition: opacity 200ms ease-in-out;
}

.container :global(.vtex-modal-layout-0-x-triggerContainer--quickview-fb) {
  opacity: 1;
}

.container:hover :global(.vtex-modal-layout-0-x-triggerContainer) {
  opacity: 1;
}

@media screen and (max-width: 40em) {
  .container :global(.vtex-modal-layout-0-x-triggerContainer) {
    display: none;
  }
  .container :global(.vtex-modal-layout-0-x-triggerContainer--quickview-fb) {
    display: block;
  }
}

.containerNormal {
  max-height: 350px;
  background: #FFFFFF;
  box-shadow: 0px 3px 6px #00000014;
  max-width: 240px!important;
  padding: 8px;
  height: 350px;
  border-radius: 30px;

  @media screen and (min-width: em(1024px)) {
    position: relative;
  }

  :global(.vtex-store-components-3-x-listPrice) {
    margin: 0;
    justify-content: center;
  }

  @media screen and (max-width: 767px) {
    height: 188px !important;
  }
}

:global(.vtex-product-summary-2-x-element) {
  :global(.vtex-button__label) {
    padding-right: 0px;
    padding-left: 0px;
    padding-top: 6px !important;
  }
}

.container {
  :global(.vtex-button) {
    font-size: 14px;
    font-weight: 700;
    text-transform: capitalize;
    line-height: 20px;
    background-color: $primary;
    min-height: 32px !important;
    max-height: 32px !important;

    &:hover {
      background-color: $secondary;
      border-color: $secondary;
      color: $primary;
    }

    :global(.vtex-button__label){
      &::after{
        content: '+';
        margin-left: 4px;
      }
    }
  }

  :global(.vtex-product-price-1-x-savings){
    background: #525252;
    border-radius: 13px;
    font-size: 14px;
    padding: 2px 6px;
    color: #f7f7f7;
    font-weight: bold;
    width: auto;
  }

  :global(.vtex-product-summary-2-x-element) {
    justify-content: space-between;

    @media screen and (max-width: 767px) {
      padding-bottom: 0;

      :global(.vtex-button) {
        width: 22px !important;
        min-height: 22px !important;

        display: flex;
        align-items: center;
        justify-content: center;

        :global(.vtex-button__label) {
          display: none;
        }

        &::after {
          content: "";
          width: 8px;
          height: 8px;
          display: inline-block;
          background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='8.461' height='8.461' viewBox='0 0 8.461 8.461'%3E%3Cpath id='Path_36486' data-name='Path 36486' d='M23.4,3.173H21.288V1.058a1.058,1.058,0,1,0-2.115,0V3.173H17.058a1.058,1.058,0,0,0,0,2.115h2.115V7.4a1.058,1.058,0,1,0,2.115,0V5.288H23.4a1.058,1.058,0,1,0,0-2.115Z' transform='translate(-16)' fill='%23fff'/%3E%3C/svg%3E%0A");
          background-repeat: no-repeat;
          background-size: cover;
        }
      }

      :global(.vtex-product-summary-2-x-imageNormal) {
        max-height: 90px !important;
      }
    }
  }

  /* QUANTITY SELECTOR CUSTOM - SHELF */
  :global(.vtex-numeric-stepper-container) {
    border: 1px solid #dedede;
    border-radius: 5px;

    :global(.vtex-numeric-stepper__input),
    :global(.vtex-numeric-stepper__plus-button),
    :global(.vtex-numeric-stepper__minus-button) {
      border: 0;
      height: 32px;

      @media screen and (max-width: 767px) {
        height: 22px;
      }
    }

    @media screen and (max-width: 767px) {
      :global(.vtex-numeric-stepper__input) {
        font-size: 12px;
      }
    }

    :global(.vtex-numeric-stepper__plus-button) {
      &::after {
        content: "";
        background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='8.461' height='8.461' viewBox='0 0 8.461 8.461'%3E%3Cpath id='Path_36155' data-name='Path 36155' d='M23.4,3.173H21.288V1.058a1.058,1.058,0,1,0-2.115,0V3.173H17.058a1.058,1.058,0,0,0,0,2.115h2.115V7.4a1.058,1.058,0,1,0,2.115,0V5.288H23.4a1.058,1.058,0,1,0,0-2.115Z' transform='translate(-16)' fill='%23ed1d25'/%3E%3C/svg%3E%0A");
        background-repeat: no-repeat;
        background-size: contain;
        width: 8px;
        height: 8px;
        display: inline-block;
      }

      :global(.vtex-numeric-stepper__plus-button__text) {
        display: none;
      }
    }

    :global(.vtex-numeric-stepper__minus-button) {
      &::after {
        content: "";
        background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='8.461' height='2.134' viewBox='0 0 8.461 2.134'%3E%3Cpath id='Path_36484' data-name='Path 36484' d='M23.4,3.173H21.288c.017-.028-2.143,0-2.115,0H17.058a1.058,1.058,0,0,0,0,2.115h2.115c.021-.006,2.124.015,2.115,0H23.4a1.058,1.058,0,1,0,0-2.115Z' transform='translate(-16 -3.16)' fill='%23ed1d25'/%3E%3C/svg%3E%0A");
        background-repeat: no-repeat;
        background-size: contain;
        width: 8px;
        height: 2px;
        display: inline-block;
      }

      :global(.vtex-numeric-stepper__minus-button__text) {
        display: none;
      }
    }
  }

  @media screen and (max-width: 767px) {
    max-width: 108px!important;
    max-height: 184px;
    border-radius: 15px;
    position: relative;

    :global(.vtex-numeric-stepper-wrapper) {
      position: absolute;
      top: 84px;
      left: 4px;
      right: 4px;

      :global(.vtex-numeric-stepper__plus-button),
      :global(.vtex-numeric-stepper__minus-button){
        width: 24px!important;
      }
    }

    :global(.vtex-product-price-1-x-savings){
      font-size: 11px;
    }

    :global(.vtex-store-components-3-x-priceContainer) {
      display: flex;
      flex-direction: column;

      :global(.vtex-store-components-3-x-listPrice) {
        margin: 0;
        order: 2;

        :global(.vtex-store-components-3-x-listPriceValue){
          padding: 0;

          :global(.vtex-store-components-3-x-currencyContainer) {
            font-size: 8px;
          }
        }
      }

      :global(.vtex-store-components-3-x-sellingPrice) {
        font-size: inherit !important;
        order: 1;
      }
    }

  }
}

.productBrandContainer {
  display: flex;
  border-left: 2px solid #ffd500;
  padding-left: 5px;
  font-size: 13px;

  @media screen and (max-width: 767px) {
    display: none;
  }
}

:global(.vtex-shelf-1-x-sliderContainer--related-products) {
  :global(.vtex-product-summary-2-x-element) {
    padding-top: 15px;
    padding-bottom: 16px;
  }
}

:global(.vtex-product-summary-2-x-currencyContainer) {
  color: #525252;
  font-size: 24px;
  font-weight: bold;
  margin: 15px 0;
}

:global(.vtex-product-summary-2-x-element) {
  :global(.vtex-store-components-3-x-priceContainer) {
    text-align: left;
    width: 100%;

    @media screen and (max-width: 767px) {
      margin: 0;
    }
  }
}

:global(.vtex-product-summary-2-x-nameContainer) {
  border-bottom: none;
  align-items: normal;
  padding: 0;

  @media screen and (max-width: em(1024px)) {
    height: 34px;
    padding: 0;
  }
}

@media screen and (max-width: 767px) {
  .productBrand {
    font-size: 10px!important;
    height: auto!important;
  }
}

:global(.vtex-product-summary-2-x-priceContainer) {
  padding-top: 0px;
  padding-bottom: 0px;
}

